Fix form submission to prevent error on business.html

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 
   <!-- Login form popup -->
   <div class="login-form-container">
-    <form id="signinForm">
+    <form id="signinForm" action="Business.html" method="get">
       <div id="close-login-form" onclick="closeLogin()">×</div>
       <h3>sign in</h3>
 
