Fix form submission to prevent error on business.html

--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
 <script>
   document.getElementById('signinForm').addEventListener('submit', function(event) {
     event.preventDefault();
-    window.location.href = 'business.html';
+    window.location.href = 'Business.html';
   });
 </script>
 
